Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-105360

warning C4996: 'QRegularExpression::match': Use matchView instead.

    XMLWordPrintable

Details

    • 9c2fd1724c (qt/qtdeclarative/dev) 9c2fd1724c (qt/tqtc-qtdeclarative/dev)

    Description

      error C2220: the following warning is treated as an error
      \Users\qt\work\qt\qtdeclarative\src\qmldom\qqmldomitem.cpp(1683): warning C4996: 'QRegularExpression::match': Use matchView instead.
      

      Build log: https://testresults.qt.io/logs/qt/qtdeclarative/055557b9537a03e8d3edab8405267df2fba07079/WindowsWindows_10_21H2x86_64WindowsWindows_10_21H2x86_64MSVC2019qtci-windows-10_21H2-x86_64-51-b1a5e1Conan_DebugAndRelease_Sccache_UseConfigure_WarningsAreErrors/29ecb351320e7a074c6f2fb90f6c3743bef72711/build_1659653980/log.txt.gz

      Details: https://testresults.qt.io/coin/integration/qt/qtdeclarative/tasks/1659653956

      Tested changes (refs/builds/qtci/dev/1659653955):
      https://codereview.qt-project.org/c/qt/qtdeclarative/+/425012/2 Update dependencies on 'dev' in qt/qtdeclarative

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            fabiankosmale Fabian Kosmale
            janihe Jani Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes